--- a/YNK_front/project/project.config.json
+++ b/YNK_front/project/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wx50924977343df1a3",
+	"appid": "wxbd407de09e3f2d9b",
 	"projectname": "miniprogram-test-2",
 	"debugOptions": {
 		"hidedInDevtools": []
