--- a/YNK_front/project/app.json
+++ b/YNK_front/project/app.json
@@ -1,59 +1,65 @@
 {
   "pages": [
-    "page/component/index",
-    "page/component/category/category",
-    "page/component/cart/cart",
     "page/component/user/user",
+    
+    "page/component/index",
+    
+        "page/component/cart/cart",
+        
+
+    "page/component/category/category",        
     "page/component/address/address",
     "page/component/orders/orders",
     "page/component/details/details",
     "page/component/list/list",
     "page/component/publish/publish",
     "page/component/chat/chat",
-    "page/component/chat-list/chat-list"
+    "page/component/chat-list/chat-list",
+    "page/component/accredit/accredit"
+
   ],
   "window": {
-    "navigationBarTextStyle": "white",
+    "navigationBarTextStyle": "black",
     "navigationBarTitleText": "零食商贩",
-    "navigationBarBackgroundColor": "#AB956D",
-    "backgroundColor": "#AB956D",
+    "navigationBarBackgroundColor": "white",
+    "backgroundColor": "white",
     "enablePullDownRefresh": true
   },
   "tabBar": {
     "color": "#b7b7b7",
-    "selectedColor": "#AB956D",
+    "selectedColor": "#BC8F8F",
     "borderStyle": "white",
-    "backgroundColor": "#f5f5f5",
+    "backgroundColor": "white",
     "list": [
       {
         "pagePath": "page/component/index",
         "iconPath": "image/12.png",
         "selectedIconPath": "image/11.png",
-        "text": "上新"
+        "text": ""
       },
       {
         "pagePath": "page/component/category/category",
-        "iconPath": "image/22.png",
-        "selectedIconPath": "image/21.png",
-        "text": "分类"
+        "iconPath": "image/category.png",
+        "selectedIconPath": "image/category2.png",
+        "text": ""
       },
       {
         "pagePath": "page/component/publish/publish",
-        "iconPath": "image/32.png",
-        "selectedIconPath": "image/31.png",
-        "text": "发布"
+        "iconPath": "image/publish.png",
+        "selectedIconPath": "image/publish2.png",
+        "text": ""
       },
       {
-        "pagePath": "page/component/chat/chat",
-        "iconPath": "image/12.png",
-        "selectedIconPath": "image/11.png",
-        "text": "消息"
+        "pagePath": "page/component/chat-list/chat-list",
+        "iconPath": "image/chat.png",
+        "selectedIconPath": "image/chat2.png",
+        "text": ""
       },
       {
         "pagePath": "page/component/user/user",
         "iconPath": "image/42.png",
         "selectedIconPath": "image/41.png",
-        "text": "我的"
+        "text": ""
       }
     ]
   },
